<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cookbook</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="back">Back</string>
    <string name="recipes">Recipes</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="shopping_list">Shopping List</string>
    <string name="ingredients_heading">Ingredients</string>
    <string name="add">Add</string>
    <string name="move_selected">Move Selected</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="reminder_set">Reminder set for %1$s</string>
</resources>
